--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "grunt-contrib-copy": "~0.8.0"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
     "grunt-responsive-images": "^0.1.6",
-    "idb": "^2.1.2"
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-uglify": "^3.0.0",
+    "idb": "^2.1.2",
+    "imagemin-pngquant": "^5.1.0"
   }
 }
