--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-webp": "^3.0.0",
     "idb": "^2.1.2",
     "imagemin-pngquant": "^5.1.0"
   }
