--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-webp": "^3.0.0",
     "idb": "^2.1.2",
-    "imagemin-pngquant": "^5.1.0"
+    "imagemin-pngquant": "^5.1.0",
+    "material-design-icons": "^3.0.1"
   }
 }
